# Dual_Autodiff

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  environment.yaml  pyproject.toml  requirements.txt
docs/: dual_autodiff.ipynb
docs/source/: conf.py  dual_autodiff.ipynb  dual_autodiff.rst  implementation.rst  index.rst  modules.rst  tutorial.rst
dual_autodiff/: __init__.py  base.py  dual.py  functions.py  version.py
dual_autodiff_x/: MANIFEST.in  README.md  pyproject.toml  setup.py
dual_autodiff_x/dual_autodiff/: __init__.py  dual.c  dual.py  functions.c  version.c  version.py
dual_autodiff_x/dual_autodiff_x/: __init__.py  base.c  base.pyx  dual.c  functions.c  functions.pyx  version.c
dual_autodiff_x/wheel_contents/310_wheel_contents/dual_autodiff_x/: __init__.py
dual_autodiff_x/wheel_contents/310_wheel_contents/rsr45_dual_autodiff_x-0.1.16.dist-info/: METADATA  RECORD  top_level.txt
dual_autodiff_x/wheel_contents/311_wheel_contents/rsr45_dual_autodiff_x-0.1.16.dist-info/: RECORD
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.0.1b2-cp310-cp310-linux_x86_64.whl  dual_autodiff_x-0.0.1b2-cp311-cp311-linux_x86_64.whl  rsr45_dual_autodiff_x-0.0.1b3-cp310-cp310-linux_x86_64.whl  rsr45_dual_autodiff_x-0.0.1b3-cp311-cp311-linux_x86_64.whl  rsr45_dual_autodiff_x-0.1.16-cp310-cp310-linux_x86_64.whl  rsr45_dual_autodiff_x-0.1.16-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  rsr45_dual_autodiff_x-0.1.16-cp311-cp311-linux_x86_64.whl  rsr45_dual_autodiff_x-0.1.16-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
report/: references.bib  report.tex
tests/: test_base.py  test_dual.py  test_functions.py
