[project]
name = "rsr45-dual-autodiff-x"
version = "0.1.7"
description = "A package for dual number-based automatic differentiation"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
[build-system]
requires = ["setuptools", "Cython>=0.29", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://pypi.org/project/rsr45-dual-autodiff-x/"


